<resources>
    <string name="app_name">Quiz</string>
    <string name="topics">Topics</string>
    <string name="complete_header">Your Completed Quizzes</string>
    <string name="main_graphic">Logo graphic</string>
    <string name="rb_easy">Easy</string>
    <string name="rb_medium">Medium</string>
    <string name="rb_hard">Hard</string>
    <string name="question">Question goes here</string>
    <string name="index">Index</string>
    <string name="btn_next">Next ></string>
    <string name="btn_results">Get Results!</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="category">Category goes here</string>
    <string name="date">Date goes here</string>
    <string name="score">Score goes here</string>
    <string name="old_quiz_title">Title</string>
    <string name="old_quiz_subtitle">Subtitle</string>
</resources>
