<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.developments.knowledgehut.quiz.MainActivity">

    <ImageView
        android:id="@+id/iv_graphic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/quiz_letters_red"
        android:contentDescription="@string/main_graphic" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="16dp"
        android:text="@string/topics"
        android:textSize="30sp" />

    <RadioGroup
        android:id="@+id/rg_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:checkedButton="@+id/rb_easy"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_easy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/rb_easy" />

        <RadioButton
            android:id="@+id/rb_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/rb_medium" />

        <RadioButton
            android:id="@+id/rb_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="casual"
            android:text="@string/rb_hard" />

    </RadioGroup>

    <ListView
        android:id="@+id/lv_categories"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

    </ListView>

</LinearLayout>
